--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/unist": "^3.0.3",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "eslint": "^9",
